fix: delete body: overflow hidden, change package json, readme

--- a/src/layouts/main/main.scss
+++ b/src/layouts/main/main.scss
@@ -1,7 +1,3 @@
-body {
-  overflow-y: hidden;
-}
-
 .page {
   margin: 0 auto;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
